Blender 2.78 crashes when File->Data Previews ->Refresh Datablock Previews #49553

Closed
opened 2016-10-04 08:19:24 +02:00 by Eric Klein · 5 comments

System Information
Windows 10 and Nvidia 2xgtx780

Blender Version
Broken: Official 2.78 release (Hash: 4bb1e22)
Worked: Official 2.77a

Short description of error
Blender 2.78 crash and exit then click on File->Data Previews ->Refresh Datablock Previews

Exact steps for others to reproduce the error
Load BMW27.blend or Classroom.blend scene.
Click on File->Data Previews ->Refresh Datablock Previews.

**System Information** Windows 10 and Nvidia 2xgtx780 **Blender Version** Broken: Official 2.78 release (Hash: 4bb1e22) Worked: Official 2.77a **Short description of error** Blender 2.78 crash and exit then click on File->Data Previews ->Refresh Datablock Previews **Exact steps for others to reproduce the error** Load BMW27.blend or Classroom.blend scene. Click on File->Data Previews ->Refresh Datablock Previews.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @eklein

Added subscriber: @eklein
Bastien Montagne self-assigned this 2016-10-04 12:30:07 +02:00

This issue was referenced by e5c3284467

This issue was referenced by e5c32844678e292a084d6d97eb2d4ba6affc217d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49553
No description provided.